<resources>
    <string name="app_name">E-Commerce</string>
    <string name="fullnameTxt">Full Name</string>
    <string name="passwordTxt">Password</string>
    <string name="repasswordTxt">Retype Password</string>
    <string name="emailTxt">Email</string>
    <string name="usernameTxt">Username</string>
    <string name="signupTxt">Sign Up</string>
    <string name="signinTxt">Sign In</string>
    <string name="creditcardTxt">Credit Card Number</string>
    <string name="jobTxt">Job</string>
    <string name="bdayTxt">Birthdate (dd/mm/yyyy)</string>
    <string name="genderTxt">Gender</string>
    <string name="addToCartTxt">Add to Cart</string>
    <string name="proTxt">Products</string>
    <string name="catTxt">Categories</string>
    <string name="hintSearchTxt">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remeberMeTxt">Remeber Me?</string>
    <string name="forgetPasswrodTxt">Forget Passwrod</string>
    <string name="createAccTxt">Don\'t have an account? Signup</string>
    <string name="reNewPassword">Re New Password</string>
    <string name="newPassword">New Password</string>
    <string name="changePassword">Change Password</string>
    <string name="cartEditBtn">Edit</string>
    <string name="removeTxt">Remove</string>
    <string name="doneTxt">Done</string>
    <string name="cancelTxt">Cancel</string>
    <string name="title_activity_maps">Map</string>

</resources>
