<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ForgetPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_margin="10dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/forgetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailTxt"
                android:nextFocusDown="@id/forgetUsername"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/forgetUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameTxt"
                android:nextFocusDown="@id/forgetPassword"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPassword"
                android:nextFocusDown="@id/forgetRePassword"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/forgetRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reNewPassword"
                android:nextFocusDown="@id/button5"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:onClick="changePassword"
            android:text="@string/changePassword" />


    </LinearLayout>

</ScrollView>